--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(LINUX_MAINTAINER_EMAIL "fractyl.github@gmail.com")
 
 # Add your custom source files here - header files are optional and only required for visibility
 # e.g. in Xcode or Visual Studio
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp src/HUD-dock.cpp)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp src/HUD-dock.cpp src/QioToggle.cpp)
 
 # Import libobs as main plugin dependency
 find_package(libobs REQUIRED)
@@ -26,7 +26,10 @@ include(cmake/ObsPluginHelpers.cmake)
 
 # Uncomment these lines if you want to use the OBS Frontend API in your plugin
 find_package(obs-frontend-api REQUIRED)
+set(OBS_FRONTEND_API_NAME "obs-frontend-api")
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
+target_include_directories(${PROJECT_NAME} PRIVATE
+        "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
 
 # Uncomment those lines if you want to use Qt in your plugin
 
